<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.7">

        <Button
            android:id="@+id/dot"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".25" />

        <Button
            android:id="@+id/zero"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@+id/dot"
            app:layout_constraintWidth_percent=".25" />

        <Button
            android:id="@+id/equal"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onEqualClick"
            android:text="@string/equal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@id/zero"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/one"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/one"
            app:layout_constraintBottom_toTopOf="@+id/dot"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".25" />

        <Button
            android:id="@+id/two"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/two"
            app:layout_constraintBottom_toTopOf="@id/zero"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@id/one"
            app:layout_constraintWidth_percent=".25" />

        <Button
            android:id="@+id/three"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/three"
            app:layout_constraintBottom_toTopOf="@+id/equal"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@+id/two"
            app:layout_constraintWidth_percent=".25" />

        <Button
            android:id="@+id/divide"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/divide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@id/equal"
            app:layout_constraintWidth_percent=".25" />

        <Button
            android:id="@+id/four"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/four"
            app:layout_constraintBottom_toTopOf="@+id/one"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".25" />

        <Button
            android:id="@+id/five"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/five"
            app:layout_constraintBottom_toTopOf="@id/two"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@id/four"
            app:layout_constraintWidth_percent=".25" />

        <Button
            android:id="@+id/six"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/six"
            app:layout_constraintBottom_toTopOf="@+id/three"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@+id/five"
            app:layout_constraintWidth_percent=".25" />

        <Button
            android:id="@+id/multiply"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/multiply"
            app:layout_constraintBottom_toTopOf="@+id/divide"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@+id/three"
            app:layout_constraintWidth_percent=".25" />


        <Button
            android:id="@+id/seven"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/seven"
            app:layout_constraintBottom_toTopOf="@+id/four"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".25" />

        <Button
            android:id="@+id/eight"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/eight"
            app:layout_constraintBottom_toTopOf="@id/five"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@id/seven"
            app:layout_constraintWidth_percent=".25" />

        <Button
            android:id="@+id/nine"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/nine"
            app:layout_constraintBottom_toTopOf="@+id/six"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@+id/eight"
            app:layout_constraintWidth_percent=".25" />

        <Button
            android:id="@+id/minus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/minus"
            app:layout_constraintBottom_toTopOf="@+id/multiply"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@+id/six"
            app:layout_constraintWidth_percent=".25" />

        <Button
            android:id="@+id/plus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/plus"
            app:layout_constraintBottom_toTopOf="@+id/minus"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@+id/nine"
            app:layout_constraintWidth_percent=".25" />

        <Button
            android:id="@+id/open_bracket"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/open_bracket"
            app:layout_constraintBottom_toTopOf="@+id/seven"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".25" />

        <Button
            android:id="@+id/close_bracket"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:text="@string/close_bracket"
            app:layout_constraintBottom_toTopOf="@id/eight"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@id/open_bracket"
            app:layout_constraintWidth_percent=".25" />

        <ImageButton
            android:id="@+id/back"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/back_button_description"
            android:onClick="onBackClick"
            android:scaleType="fitCenter"
            android:src="@drawable/back_button"
            app:layout_constraintBottom_toTopOf="@+id/nine"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toEndOf="@+id/close_bracket"
            app:layout_constraintWidth_percent=".20" />

        <Button
            android:id="@+id/clear"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClearClick"
            android:text="@string/clear"
            app:layout_constraintBottom_toTopOf="@+id/plus"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@+id/nine"
            app:layout_constraintWidth_percent=".25" />


    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.3">

        <TextView
            android:id="@+id/screen_expression"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/screen_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/screen_expression" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>